개선 & 수정